Updated the update com method in create atlas

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "b6548580",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
    "source": [
     "moving_name = 'AtlasV8'\n",
     "fixed_name = 'Allen'\n",
-    "moving_all = fetch_coms(moving_name, scaling_factor=1)\n",
+    "moving_all = list_coms(moving_name, scaling_factor=1)\n",
     "fixed_all = list_coms(fixed_name, scaling_factor=1)\n",
     "common_keys = list(moving_all.keys() & fixed_all.keys())\n",
     "bad_keys = ('RtTg', 'AP')\n",
@@ -120,7 +120,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
+   "id": "e768d131",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fixed_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "68804c17",
    "metadata": {},
    "outputs": [
@@ -144,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "8860c495",
    "metadata": {},
    "outputs": [
@@ -152,7 +173,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMS 237.06805950085752\n"
+      "RMS 237.06805950085712\n"
      ]
     }
    ],
@@ -182,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "4e7b269b",
    "metadata": {},
    "outputs": [
@@ -237,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e8d510e",
+   "id": "69e04b18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18b581bd",
+   "id": "1316b7d1",
    "metadata": {},
    "outputs": [],
    "source": [
