Fixed an issue with the padding screwing up the COM

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "b6548580",
    "metadata": {},
    "outputs": [
@@ -98,19 +98,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37\n"
+      "51\n"
      ]
     }
    ],
    "source": [
-    "moving_name = 'AtlasV8'\n",
-    "fixed_name = 'Allen'\n",
-    "moving_all = list_coms(moving_name, scaling_factor=1)\n",
-    "fixed_all = list_coms(fixed_name, scaling_factor=1)\n",
+    "moving_name = 'MD589'\n",
+    "fixed_name = 'AtlasV8'\n",
+    "moving_all = fetch_coms(moving_name, scaling_factor=50)\n",
+    "fixed_all = fetch_coms(fixed_name, scaling_factor=50)\n",
     "common_keys = list(moving_all.keys() & fixed_all.keys())\n",
     "bad_keys = ('RtTg', 'AP')\n",
     "#bad_keys = ('RtTg',)\n",
-    "#bad_keys = ()\n",
+    "bad_keys = ()\n",
     "good_keys = set(common_keys) - set(bad_keys)\n",
     "\n",
     "moving_src = np.array([moving_all[s] for s in good_keys])\n",
@@ -120,64 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "62af7c50",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'SC': [9140.45, 2387.99, 5692.5],\n",
-       " 'IC': [10400.0, 2325.0, 5675.0],\n",
-       " 'AP': [12653.24, 5010.46, 5692.13],\n",
-       " 'RtTg': [9503.41, 5321.8, 5692.27],\n",
-       " 'SNR_L': [8440.67, 5167.29, 4031.72],\n",
-       " 'SNR_R': [8440.38, 5167.22, 7353.46],\n",
-       " 'PBG_L': [9402.89, 3844.3, 3551.05],\n",
-       " 'PBG_R': [9400.69, 3846.28, 7833.2699999999995],\n",
-       " '3N_L': [9102.49, 3794.35, 5520.97],\n",
-       " '3N_R': [9103.39, 3793.96, 5864.36],\n",
-       " '4N_L': [9588.57, 3777.83, 5432.47],\n",
-       " '4N_R': [9586.8, 3774.79, 5952.9],\n",
-       " 'SNC_L': [8354.09, 5124.66, 4293.63],\n",
-       " 'SNC_R': [8355.82, 5122.61, 7092.21],\n",
-       " 'VLL_L': [9464.28, 5175.59, 3889.94],\n",
-       " 'VLL_R': [9465.13, 5173.84, 7495.39],\n",
-       " '5N_L': [10193.03, 5286.55, 4091.6299999999997],\n",
-       " '5N_R': [10193.42, 5285.53, 7292.79],\n",
-       " 'LC_L': [10709.59, 4277.99, 4731.98],\n",
-       " 'LC_R': [10709.9, 4278.52, 6652.16],\n",
-       " 'DC_L': [11270.27, 5001.99, 3229.0],\n",
-       " 'DC_R': [11270.93, 5001.97, 8156.389999999999],\n",
-       " 'Sp5C_L': [12832.54, 5896.03, 3980.0],\n",
-       " 'Sp5I_L': [12106.55, 5871.75, 3747.84],\n",
-       " 'Sp5I_R': [12106.52, 5872.03, 7637.71],\n",
-       " 'Sp5O_L': [11138.94, 5911.89, 3786.76],\n",
-       " 'Sp5O_R': [11138.47, 5913.09, 7597.6],\n",
-       " '6N_L': [10771.23, 5214.76, 5290.86],\n",
-       " '6N_R': [10771.44, 5214.59, 6094.08],\n",
-       " '7N_L': [10852.7, 6775.45, 4339.98],\n",
-       " '7N_R': [10852.58, 6775.31, 7045.18],\n",
-       " '7n_L': [10687.02, 5482.83, 4706.13],\n",
-       " '7n_R': [10688.11, 5481.93, 6677.47],\n",
-       " 'Amb_L': [11883.14, 6617.8, 4323.63],\n",
-       " 'Amb_R': [11881.14, 6617.7, 7061.86],\n",
-       " 'LRt_L': [12344.38, 6990.6, 4392.72],\n",
-       " 'LRt_R': [12344.02, 6990.91, 6992.62]}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fixed_all"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "68804c17",
    "metadata": {},
    "outputs": [
@@ -185,9 +128,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 9.72209073e-01 -4.15690120e-02  1.32902967e-02 -1.34232620e+03]\n",
-      " [ 1.31329250e-01  1.23381332e+00  7.23778938e-02 -4.42036988e+03]\n",
-      " [ 5.65136380e-03 -2.11118227e-02  1.14956036e+00 -2.73811629e+02]\n",
+      "[[ 1.01578369e+00  2.10247361e-01  1.62192508e-02 -3.14754038e+01]\n",
+      " [-1.60572784e-01  9.37472333e-01  2.53631879e-02  2.39274541e+01]\n",
+      " [-1.86321988e-03 -5.50009030e-02  9.57435595e-01  1.05659084e+01]\n",
       " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n"
      ]
     }
@@ -201,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "8860c495",
    "metadata": {},
    "outputs": [
@@ -209,7 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMS 237.06805950085726\n"
+      "RMS 1.9530682588983554\n"
      ]
     }
    ],
@@ -239,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "4e7b269b",
    "metadata": {},
    "outputs": [
@@ -247,10 +190,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AtlasV8 SC non trans [10949.  3924.  5199.]\n",
-      "AtlasV8 SC apply trans [9209. 2235. 5682.]\n",
-      "Allen SC [9140. 2388. 5692.]\n",
-      "AtlasV8-Allen SC [  68. -153.  -11.]\n"
+      "MD589 SC non trans [227.  95.  86.]\n",
+      "MD589 SC apply trans [220.  78.  87.]\n",
+      "AtlasV8 SC [219.  78.  88.]\n",
+      "MD589-AtlasV8 SC [ 1. -0. -1.]\n"
      ]
     }
    ],
