Added better debugging info in create atlas volume

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "id": "b6548580",
    "metadata": {},
    "outputs": [
@@ -98,29 +98,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "51\n"
+      "35\n"
      ]
     }
    ],
    "source": [
-    "moving_name = 'MD589'\n",
-    "fixed_name = 'AtlasV8'\n",
-    "moving_all = fetch_coms(moving_name, scaling_factor=50)\n",
-    "fixed_all = fetch_coms(fixed_name, scaling_factor=50)\n",
+    "moving_name = 'AtlasV8'\n",
+    "fixed_name = 'Allen'\n",
+    "moving_all = fetch_coms(moving_name, scaling_factor=1)\n",
+    "fixed_all = list_coms(fixed_name, scaling_factor=1)\n",
     "common_keys = list(moving_all.keys() & fixed_all.keys())\n",
     "bad_keys = ('RtTg', 'AP')\n",
     "#bad_keys = ('RtTg',)\n",
-    "bad_keys = ()\n",
+    "#bad_keys = ()\n",
     "good_keys = set(common_keys) - set(bad_keys)\n",
     "\n",
     "moving_src = np.array([moving_all[s] for s in good_keys])\n",
     "fixed_src = np.array([fixed_all[s] for s in good_keys])\n",
-    "print(len(common_keys))"
+    "print(len(good_keys))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "id": "68804c17",
    "metadata": {},
    "outputs": [
@@ -128,9 +128,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.01578369e+00  2.10247361e-01  1.62192508e-02 -3.14754038e+01]\n",
-      " [-1.60572784e-01  9.37472333e-01  2.53631879e-02  2.39274541e+01]\n",
-      " [-1.86321988e-03 -5.50009030e-02  9.57435595e-01  1.05659084e+01]\n",
+      "[[ 9.72209073e-01 -4.15690120e-02  1.32902967e-02 -1.33169397e+03]\n",
+      " [ 1.31329250e-01  1.23381332e+00  7.23778938e-02 -4.36246757e+03]\n",
+      " [ 5.65136380e-03 -2.11118227e-02  1.14956036e+00  6.45836661e+02]\n",
       " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n"
      ]
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "id": "8860c495",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMS 1.9530682588983554\n"
+      "RMS 237.0680595008572\n"
      ]
     }
    ],
@@ -176,13 +176,13 @@
     "# MD589 to Allen RMS 260.0211852431133\n",
     "# MD585 to Allen RMS 263.314352291951\n",
     "# MD594 to Allen RMS 250.79820210419254\n",
-    "# AtlasV8 disk to Allen RMS 237.0680595008574\n",
+    "# AtlasV8 disk to Allen RMS 237.0680595008572\n",
     "# MD585 to MD589 RMS 18.2658167690059"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "id": "4e7b269b",
    "metadata": {},
    "outputs": [
@@ -190,10 +190,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MD589 SC non trans [227.  95.  86.]\n",
-      "MD589 SC apply trans [220.  78.  87.]\n",
-      "AtlasV8 SC [219.  78.  88.]\n",
-      "MD589-AtlasV8 SC [ 1. -0. -1.]\n"
+      "AtlasV8 SC non trans [10949.  3924.  4399.]\n",
+      "AtlasV8 SC apply trans [9209. 2235. 5682.]\n",
+      "Allen SC [9140. 2388. 5692.]\n",
+      "AtlasV8-Allen SC [  68. -153.  -11.]\n"
      ]
     }
    ],
@@ -213,7 +213,8 @@
     "print(f'{moving_name} {structure} apply trans {np.round(transformed_structure/1)}')\n",
     "print(f'{fixed_name} {structure} {np.round(np.array(fixed_all[structure]))}')\n",
     "diff = transformed_structure - fixed_all[structure]\n",
-    "print(f'{moving_name}-{fixed_name} {structure} {np.round(diff)}')\n"
+    "print(f'{moving_name}-{fixed_name} {structure} {np.round(diff)}')\n",
+    "# AtlasV8-Allen SC [  71. -139.  -15.]"
    ]
   },
   {
