--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,25 +12,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 1,
-   "id": "116fa24e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/eddyod/programming/pipeline/src\n"
-     ]
-    }
-   ],
-=======
    "execution_count": null,
    "id": "116fa24e",
    "metadata": {},
    "outputs": [],
->>>>>>> c89dc31c7b40879f1d289164989ebfe92b1aa795
    "source": [
     "import os\n",
     "import sys\n",
@@ -53,11 +38,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 2,
-=======
    "execution_count": null,
->>>>>>> c89dc31c7b40879f1d289164989ebfe92b1aa795
    "id": "45da981f",
    "metadata": {},
    "outputs": [],
@@ -68,11 +49,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 3,
-=======
    "execution_count": null,
->>>>>>> c89dc31c7b40879f1d289164989ebfe92b1aa795
    "id": "299762ca",
    "metadata": {},
    "outputs": [],
@@ -88,11 +65,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 4,
-=======
    "execution_count": null,
->>>>>>> c89dc31c7b40879f1d289164989ebfe92b1aa795
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -109,95 +82,42 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 12,
-   "id": "b6548580",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "37\n"
-     ]
-    }
-   ],
-   "source": [
-    "moving_name = 'AtlasV8'\n",
-    "fixed_name = 'Allen'\n",
-    "moving_all = list_coms(moving_name, scaling_factor=1)\n",
-    "fixed_all = list_coms(fixed_name, scaling_factor=1)\n",
-=======
    "execution_count": null,
    "id": "b6548580",
    "metadata": {},
    "outputs": [],
    "source": [
-    "moving_name = 'AtlasV8'\n",
-    "fixed_name = 'Allen'\n",
-    "moving_all = fetch_coms(moving_name, scaling_factor=10)\n",
-    "fixed_all = list_coms(fixed_name, scaling_factor=10)\n",
->>>>>>> c89dc31c7b40879f1d289164989ebfe92b1aa795
+    "moving_name = 'DK55'\n",
+    "fixed_name = 'AtlasV8'\n",
+    "moving_all = list_coms(moving_name, scaling_factor=1)\n",
+    "fixed_all = fetch_coms(fixed_name, scaling_factor=1)\n",
     "common_keys = list(moving_all.keys() & fixed_all.keys())\n",
     "bad_keys = ('RtTg', 'AP')\n",
     "#bad_keys = ('RtTg',)\n",
-    "#bad_keys = ()\n",
+    "bad_keys = ()\n",
     "good_keys = set(common_keys) - set(bad_keys)\n",
     "\n",
     "moving_src = np.array([moving_all[s] for s in good_keys])\n",
     "fixed_src = np.array([fixed_all[s] for s in good_keys])\n",
-<<<<<<< HEAD
     "print(len(common_keys))"
-=======
-    "print(len(good_keys))"
->>>>>>> c89dc31c7b40879f1d289164989ebfe92b1aa795
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 7,
-   "id": "e768d131",
+   "execution_count": null,
+   "id": "3e4f7c68",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fixed_all"
+    "moving_all"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "68804c17",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 9.72209073e-01 -4.15690120e-02  1.32902967e-02 -1.34232620e+03]\n",
-      " [ 1.31329250e-01  1.23381332e+00  7.23778938e-02 -4.42036988e+03]\n",
-      " [ 5.65136380e-03 -2.11118227e-02  1.14956036e+00 -2.73811629e+02]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n"
-     ]
-    }
-   ],
-=======
    "execution_count": null,
    "id": "68804c17",
    "metadata": {},
    "outputs": [],
->>>>>>> c89dc31c7b40879f1d289164989ebfe92b1aa795
    "source": [
     "#transformation_matrix = get_affine_transformation(moving_name=moving_name, fixed_name=fixed_name, \n",
     "#                                                  scaling_factor=1)\n",
@@ -207,25 +127,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 14,
-   "id": "8860c495",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMS 237.06805950085712\n"
-     ]
-    }
-   ],
-=======
    "execution_count": null,
    "id": "8860c495",
    "metadata": {},
    "outputs": [],
->>>>>>> c89dc31c7b40879f1d289164989ebfe92b1aa795
    "source": [
     "df_list = []\n",
     "error = []\n",
@@ -246,38 +151,16 @@
     "# MD589 to Allen RMS 260.0211852431133\n",
     "# MD585 to Allen RMS 263.314352291951\n",
     "# MD594 to Allen RMS 250.79820210419254\n",
-<<<<<<< HEAD
     "# AtlasV8 disk to Allen RMS 237.0680595008574\n",
-=======
-    "# AtlasV8 disk to Allen RMS 237.0680595008572\n",
->>>>>>> c89dc31c7b40879f1d289164989ebfe92b1aa795
     "# MD585 to MD589 RMS 18.2658167690059"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 11,
-   "id": "4e7b269b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AtlasV8 SC non trans [10949.  3924.  5199.]\n",
-      "AtlasV8 SC apply trans [9209. 2235. 5682.]\n",
-      "Allen SC [9140. 2388. 5692.]\n",
-      "AtlasV8-Allen SC [  68. -153.  -11.]\n"
-     ]
-    }
-   ],
-=======
    "execution_count": null,
    "id": "4e7b269b",
    "metadata": {},
    "outputs": [],
->>>>>>> c89dc31c7b40879f1d289164989ebfe92b1aa795
    "source": [
     "#transformation_matrix = np.hstack([transformation_matrix, t])\n",
     "#transformation_matrix = np.vstack([transformation_matrix, np.array([0, 0, 0, 1])])\n",
@@ -294,12 +177,7 @@
     "print(f'{moving_name} {structure} apply trans {np.round(transformed_structure/1)}')\n",
     "print(f'{fixed_name} {structure} {np.round(np.array(fixed_all[structure]))}')\n",
     "diff = transformed_structure - fixed_all[structure]\n",
-<<<<<<< HEAD
-    "print(f'{moving_name}-{fixed_name} {structure} {np.round(diff)}')\n"
-=======
-    "print(f'{moving_name}-{fixed_name} {structure} {np.round(diff)}')\n",
-    "# AtlasV8-Allen SC [  71. -139.  -15.]"
->>>>>>> c89dc31c7b40879f1d289164989ebfe92b1aa795
+    "print(f'{moving_name}->{fixed_name} {structure} {np.round(diff)}')\n"
    ]
   },
   {
@@ -323,7 +201,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-<<<<<<< HEAD
    "id": "69e04b18",
    "metadata": {},
    "outputs": [],
@@ -339,71 +216,11 @@
     "scale0 = np.array([xy_resolution*SCALING_FACTOR, xy_resolution*SCALING_FACTOR, 20])\n",
     "allen_um = np.array([10,10,10])\n",
     "scale_allen = scale0 / allen_um"
-=======
-   "id": "8a7ad842",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import PolynomialFeatures\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
-    "\n",
-    "def predict_next_value(sequence):\n",
-    "    if len(sequence) < 2:\n",
-    "        raise ValueError(\"Need at least two numbers to predict the next value.\")\n",
-    "    \n",
-    "    # Reshape data for sklearn\n",
-    "    X = np.array(range(len(sequence))).reshape(-1, 1)\n",
-    "    y = np.array(sequence)\n",
-    "    \n",
-    "    # Fit linear model\n",
-    "    model = LinearRegression()\n",
-    "    model.fit(X, y)\n",
-    "    \n",
-    "    # Predict the next value\n",
-    "    next_index = len(sequence)\n",
-    "    next_value = model.predict([[next_index]])\n",
-    "    return next_value[0]\n",
-    "\n",
-    "\n",
-    "def predict_next_value(sequence, degree=2):\n",
-    "    \"\"\"\n",
-    "    Predict the next value in a non-linear sequence using polynomial regression.\n",
-    "    \n",
-    "    Args:\n",
-    "        sequence (list): A list of numerical values (non-linear).\n",
-    "        degree (int): Degree of the polynomial regression.\n",
-    "\n",
-    "    Returns:\n",
-    "        float: Predicted next value in the sequence.\n",
-    "    \"\"\"\n",
-    "    if len(sequence) < degree + 1:\n",
-    "        raise ValueError(\"Sequence too short for chosen polynomial degree.\")\n",
-    "\n",
-    "    X = np.arange(len(sequence)).reshape(-1, 1)  # [[0], [1], [2], ...]\n",
-    "    y = np.array(sequence)\n",
-    "\n",
-    "    # Transform to polynomial features\n",
-    "    poly = PolynomialFeatures(degree=degree)\n",
-    "    X_poly = poly.fit_transform(X)\n",
-    "\n",
-    "    # Fit the model\n",
-    "    model = LinearRegression()\n",
-    "    model.fit(X_poly, y)\n",
-    "\n",
-    "    # Predict the next value\n",
-    "    next_index = np.array([[len(sequence)]])\n",
-    "    next_index_poly = poly.transform(next_index)\n",
-    "    next_value = model.predict(next_index_poly)[0]\n",
-    "\n",
-    "    return next_value"
->>>>>>> c89dc31c7b40879f1d289164989ebfe92b1aa795
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-<<<<<<< HEAD
    "id": "1316b7d1",
    "metadata": {},
    "outputs": [],
@@ -413,27 +230,6 @@
     "SCALING_FACTOR = 20\n",
     "to_um = np.array([0.452*32, 0.452*32, 20])\n",
     "(volume_shape * to_um) / SCALING_FACTOR"
-=======
-   "id": "6b0c35a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sequence = sorted([8.3785, 6.219, 4.1, 2.8, 1.9,1.4,1.0], reverse=False)\n",
-    "# Example usage\n",
-    "next_val = predict_next_value(sequence)\n",
-    "print(sequence)\n",
-    "print(\"Next predicted value:\", next_val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f5b07bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Next value prediction:\", predict_next_value(sequence, degree=2))"
->>>>>>> c89dc31c7b40879f1d289164989ebfe92b1aa795
    ]
   }
  ],
