Adjusting the zoom on create registration

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,10 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eddyod/programming/pipeline/src\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "45da981f",
    "metadata": {},
    "outputs": [],
@@ -50,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "299762ca",
    "metadata": {},
    "outputs": [],
@@ -106,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17857563",
+   "id": "3b9fe203",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,29 +265,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d587cc5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uint16 (1140, 1000, 1820)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "reg_path = '/net/birdstore/Active_Atlas_Data/data_root/brains_info/registration/Allen'\n",
+    "allenpath = os.path.join(reg_path, 'Allen_10um_sagittal_padded.tif')\n",
+    "allen_arr = read_image(allenpath)\n",
+    "print(allen_arr.dtype, allen_arr.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "85fbb0ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "change_z=1.25 change_y=1.3888888888888888 change_x=1.3888888888888888\n"
+     ]
+    }
+   ],
+   "source": [
+    "change_z = 10/8\n",
+    "change_y = 10/7.2\n",
+    "change_x = 10/7.2\n",
+    "change = (change_z, change_y, change_x)\n",
+    "print(f'change_z={change_z} change_y={change_y} change_x={change_x}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e9abc5c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uint16 (1425, 1389, 2528)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.ndimage import zoom\n",
+    "zoomed = zoom(allen_arr, change)\n",
+    "print(zoomed.dtype, zoomed.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "338703c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
-    "print(0.00274 - 0.00272)\n",
-    "zresolution = 20\n",
-    "M_UM_SCALE = 1000000\n",
-    "test_redundant_z = []\n",
-    "for z_index, section in enumerate(range(136,177)):\n",
-    "    z = section * zresolution / M_UM_SCALE\n",
-    "    current_z = section\n",
-    "    test_redundant_z.append(current_z)\n",
-    "    try:\n",
-    "        pre_z = test_redundant_z[z_index-1]\n",
-    "    except IndexError:\n",
-    "        pre_z = current_z\n",
-    "        \n",
-    "    if current_z != pre_z:\n",
-    "        print('OK', section, z)\n",
-    "    else:\n",
-    "        print('BAD', section, z)"
+    "outpath = os.path.join(reg_path, 'Allen_8x7.2x7.2um_sagittal.tif')\n",
+    "write_image(outpath, zoomed)"
    ]
   }
  ],
