--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b9fe203",
+   "id": "c777aa81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,37 +287,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "85fbb0ec",
+   "execution_count": 11,
+   "id": "d059fb8a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "change_z=1.25 change_y=1.3888888888888888 change_x=1.3888888888888888\n"
+      "change_z=5.0 change_y=5.555555555555555 change_x=5.555555555555555\n"
      ]
     }
    ],
    "source": [
-    "change_z = 10/8\n",
-    "change_y = 10/7.2\n",
-    "change_x = 10/7.2\n",
+    "change_z = 10/2\n",
+    "change_y = 10/1.8\n",
+    "change_x = 10/1.8\n",
     "change = (change_z, change_y, change_x)\n",
     "print(f'change_z={change_z} change_y={change_y} change_x={change_x}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "e9abc5c9",
+   "execution_count": 12,
+   "id": "a987feaf",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "uint16 (1425, 1389, 2528)\n"
+     "ename": "MemoryError",
+     "evalue": "Unable to allocate 596. GiB for an array with shape (5700, 5556, 10111) and data type uint16",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mndimage\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m zoom\n\u001b[0;32m----> 2\u001b[0m zoomed \u001b[38;5;241m=\u001b[39m \u001b[43mzoom\u001b[49m\u001b[43m(\u001b[49m\u001b[43mallen_arr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mchange\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(zoomed\u001b[38;5;241m.\u001b[39mdtype, zoomed\u001b[38;5;241m.\u001b[39mshape)\n",
+      "File \u001b[0;32m/usr/local/share/pipeline/lib/python3.10/site-packages/scipy/ndimage/_interpolation.py:774\u001b[0m, in \u001b[0;36mzoom\u001b[0;34m(input, zoom, output, order, mode, cval, prefilter, grid_mode)\u001b[0m\n\u001b[1;32m    771\u001b[0m output_shape \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m(\n\u001b[1;32m    772\u001b[0m         [\u001b[38;5;28mint\u001b[39m(\u001b[38;5;28mround\u001b[39m(ii \u001b[38;5;241m*\u001b[39m jj)) \u001b[38;5;28;01mfor\u001b[39;00m ii, jj \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(\u001b[38;5;28minput\u001b[39m\u001b[38;5;241m.\u001b[39mshape, zoom)])\n\u001b[1;32m    773\u001b[0m complex_output \u001b[38;5;241m=\u001b[39m numpy\u001b[38;5;241m.\u001b[39miscomplexobj(\u001b[38;5;28minput\u001b[39m)\n\u001b[0;32m--> 774\u001b[0m output \u001b[38;5;241m=\u001b[39m \u001b[43m_ni_support\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_output\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshape\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43moutput_shape\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    775\u001b[0m \u001b[43m                                 \u001b[49m\u001b[43mcomplex_output\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcomplex_output\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    776\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m complex_output:\n\u001b[1;32m    777\u001b[0m     \u001b[38;5;66;03m# import under different name to avoid confusion with zoom parameter\u001b[39;00m\n\u001b[1;32m    778\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mndimage\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_interpolation\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m zoom \u001b[38;5;28;01mas\u001b[39;00m _zoom\n",
+      "File \u001b[0;32m/usr/local/share/pipeline/lib/python3.10/site-packages/scipy/ndimage/_ni_support.py:78\u001b[0m, in \u001b[0;36m_get_output\u001b[0;34m(output, input, shape, complex_output)\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m output \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     77\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m complex_output:\n\u001b[0;32m---> 78\u001b[0m         output \u001b[38;5;241m=\u001b[39m \u001b[43mnumpy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mzeros\u001b[49m\u001b[43m(\u001b[49m\u001b[43mshape\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     79\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     80\u001b[0m         complex_type \u001b[38;5;241m=\u001b[39m numpy\u001b[38;5;241m.\u001b[39mpromote_types(\u001b[38;5;28minput\u001b[39m\u001b[38;5;241m.\u001b[39mdtype, numpy\u001b[38;5;241m.\u001b[39mcomplex64)\n",
+      "\u001b[0;31mMemoryError\u001b[0m: Unable to allocate 596. GiB for an array with shape (5700, 5556, 10111) and data type uint16"
      ]
     }
    ],
@@ -330,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "338703c1",
+   "id": "141d2191",
    "metadata": {},
    "outputs": [],
    "source": [
